; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_string-util.c_ascii_toupper.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_string-util.c_ascii_toupper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @ascii_toupper(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  %6 = icmp sge i32 %5, 97
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i8, i8* %3, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp sle i32 %9, 122
  br i1 %10, label %11, label %17

11:                                               ; preds = %7
  %12 = load i8, i8* %3, align 1
  %13 = sext i8 %12 to i32
  %14 = sub nsw i32 %13, 97
  %15 = add nsw i32 %14, 65
  %16 = trunc i32 %15 to i8
  store i8 %16, i8* %2, align 1
  br label %19

17:                                               ; preds = %7, %1
  %18 = load i8, i8* %3, align 1
  store i8 %18, i8* %2, align 1
  br label %19

19:                                               ; preds = %17, %11
  %20 = load i8, i8* %2, align 1
  ret i8 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
